# RandomShake

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  bench_result_on_Linux_6.11.0-18-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.11.0-9-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.14.0-1015-aws_aarch64_with_g++_13.json  bench_result_on_Linux_6.14.0-1015-aws_x86_64_with_g++_13.json  bench_result_on_Linux_6.17.0-6-generic_x86_64_with_g++_15.json  bench_result_on_Linux_6.6.51+rpt-rpi-v8_aarch64_with_g++_12.json  bench_result_on_Linux_6.8.0-1016-aws_aarch64_with_g++_13.json  bench_result_on_Linux_6.8.0-1016-aws_x86_64_with_g++_13.json  bench_result_on_Linux_6.8.0-1021-aws_aarch64_with_g++_13.json  bench_result_on_Linux_6.8.0-1021-aws_x86_64_with_g++_13.json
.github/workflows/: test_ci.yml
benches/: bench.mk  bench_csprng_creation.cpp  bench_csprng_generation.cpp  bench_deterministic_csprng.cpp  bench_utils.hpp
examples/: CMakeLists.txt  README.md  csprng_generate_byte_seq.cpp  csprng_generate_byte_seq_with_non_default_xof.cpp  csprng_with_bernoulli_dist.cpp  csprng_with_binomial_dist.cpp  csprng_with_uniform_int_dist.cpp  csprng_with_uniform_real_dist.cpp
include/randomshake/: randomshake.hpp
tests/: test_bit_flipping.cpp  test_consts.hpp  test_deterministic_csprng.cpp  test_ratcheting.cpp  test_utils.hpp
